--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
+  },
+    "scripts": {
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   }
 }
