--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -8,6 +8,7 @@
     "@types/morgan": "^1.9.10",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -15,11 +16,11 @@
     "prisma": "^6.12.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   },
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/index.ts"
   }
-
 }
