--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@supabase/supabase-js": "^2.52.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
