--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -14,7 +14,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "prisma": "^6.12.0"
+    "prisma": "^6.12.0",
+    "zod": "^4.0.8"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
