--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -15,11 +15,14 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "prisma": "^6.12.0",
+    "uuid": "^11.1.0",
     "zod": "^4.0.8"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/node": "^24.1.0",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "nodemon": "^3.1.10",
@@ -41,5 +44,8 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
